# sub-navi

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  TODO.md
.github/workflows/: cmake-single-platform.yml
3rd/: CMakeLists.txt
3rd/ADRC/: CMakeLists.txt  README.txt  adrc.c
3rd/PID/: CMakeLists.txt  README.txt  pid.c
3rd/WiringPi/: CMakeLists.txt  README.txt  wiringPiSPI.c  wiringSerial.c
3rd/WiringPi/include/: wiringPiSPI.h  wiringSerial.h
3rd/cJSON/: README.txt
3rd/cjson/: CMakeLists.txt
3rd/clog/: CMakeLists.txt  log.c
3rd/clog/include/: log.h
3rd/csv_parser/: CMakeLists.txt  README.txt
3rd/jsonrpc-c/: CMakeLists.txt  README.txt  jsonrpc-c.c  mjsonrpc.c
3rd/jsonrpc-c/include/: jsonrpc-c.h  mjsonrpc.h
3rd/libev/: CMakeLists.txt  README.txt
3rd/libev/lib/: libev.la  libev.so.4.0.0
3rd/linux_uart/: CMakeLists.txt  linux_uart.c
3rd/linux_uart/include/: linux_uart.h
3rd/log.c/: CMakeLists.txt  README.txt  log.c
3rd/luckfox_gpio/: CMakeLists.txt  README.txt
3rd/nanopb/: CMakeLists.txt  README.txt
3rd/s2j/: CMakeLists.txt
3rd/s2j/include/: s2j.h  s2jdef.h
3rd/struct2json/: CMakeLists.txt  README.txt
3rd/wiringpi/: wiringPiI2C.c
3rd/wiringpi/include/: wiringPiI2C.h
3rd/wiringpi_i2c/: CMakeLists.txt
3rd/wit_c_sdk/: CMakeLists.txt  README.txt
config_header/: navi-config.h  navi-type.h
main-ctrl/: CMakeLists.txt  main.c
user/: CMakeLists.txt  arg_parse.c  arg_parse.h  ctrl_routine.c  ctrl_routine.h  jrpc_server.c  jrpc_server.h  jsonrpc_server.c  jsonrpc_server.h  main.c
user/control/: control.c  control.h  control_jrpc_func.c  control_jrpc_func.h  dir2frame.c  dir2frame.h  mode_manual.c  mode_manual.h  rpc2dir.c  rpc2dir.h
user/csv-json-config-sys/: csv-frame-factor.c  csv-frame-factor.h  csv_frame_factor.c  csv_frame_factor.h  file_rw.c  file_rw.h  json-thruster.c  json-thruster.h  json_file.c  json_file.h  json_thruster.c  json_thruster.h
user/csv-json-config-sys/config-files/: frame_factor.csv  thruster_config.json  thrusters_config.json
user/json-rpc-server/: method_ctrl.c  method_ctrl.h  method_debug.c  method_debug.h  method_info.c  method_info.h  server.c  server.h
user/peripheral/: nxp_pca9685.c  nxp_pca9685.h  wt_jy901.c  wt_jy901.h
user/protobuf-commu/: convert_msg.c  convert_msg.h  navi_master.pb.c  navi_master.pb.h  union.c  union.h  union_msg.c  union_msg.h
user/protobuf-commu/proto_def/: README.txt  navi_master.pb.c  navi_master.pb.h  navi_master.proto
user/protobuf-commu/proto_def/generator/proto/: nanopb_pb2.py
