add_subdirectory(PID)
add_subdirectory(ADRC)
add_subdirectory(cJSON)
add_subdirectory(log.c)
add_subdirectory(libev)
add_subdirectory(nanopb)
add_subdirectory(WiringPi)
add_subdirectory(wit_c_sdk)
add_subdirectory(jsonrpc-c)
add_subdirectory(csv_parser)
add_subdirectory(struct2json)
add_subdirectory(luckfox_gpio)
